dep_manifests/fe_deployment_v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-frontend-deployment-v2
  labels:
    app: chatbot-frontend
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatbot-frontend
      version: v2
  template:
    metadata:
      labels:
        app: chatbot-frontend
        version: v2
    spec:
      containers:
        - name: chatbot-frontend
          image: sumanthegdedocker/chatbot_frontend:added_icon   # Image with changed tag
          ports:
            - containerPort: 8501
      dnsPolicy: ClusterFirst
      dnsConfig:
        options:
          - name: ndots
            value: "2"
        searches:
          - default.svc.cluster.local
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
