dep_manifests/be_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-backend
  template:
    metadata:
      labels:
        app: chatbot-backend
    spec:
      containers:
        - name: chatbot-backend
          image: sumanthegdedocker/chatbot_backend:latest
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-backend-service
spec:
  selector:
    app: chatbot-backend
  ports:
    - protocol: "TCP"
      port: 8001
      targetPort: 8001
  type: ClusterIP
