dep_manifests/fe_deployment_v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-frontend-deployment-v1
  labels:
    app: chatbot-frontend
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatbot-frontend
      version: v1
  template:
    metadata:
      labels:
        app: chatbot-frontend
        version: v1
    spec:
      containers:
        - name: chatbot-frontend
          image: sumanthegdedocker/chatbot_frontend:latest
          ports:
            - containerPort: 8501
      dnsPolicy: ClusterFirst
      dnsConfig:
        options:
          - name: ndots
            value: "2"
        searches:
          - default.svc.cluster.local
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-frontend-service
spec:
  selector:
    app: chatbot-frontend
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8501
      name: http 
      #nodePort: 30001
  type: ClusterIP
