dep_manifests/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gp3-chatbot-virtual-svc
spec:
  hosts:
  - "*"
  gateways:
  - gp3-chatbot-gateway  
  http:
  - route:
    - destination:
        host: chatbot-frontend-service  # Name of your Kubernetes service
        subset: v1
      weight: 70
    - destination:
        host: chatbot-frontend-service
        subset: v2
      weight: 30
